# cudaforge

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_en.md
.codegraph/: daemon.pid
docs/: ARCHITECTURE.md  CODING_STYLE.md  CUDA_GUIDE.md  PROFILE_BASELINE.csv  PROFILE_BASELINE.md  PROFILING_GUIDE.md  TESTS.md  TEST_REPORT_20260530.md  TEST_REPORT_20260602.md  TODO_LIST.md  TODO_LIST_20260526.md  TODO_LIST_20260528.md  TODO_LIST_20260530.md  TODO_LIST_20260607.md  TODO_LIST_20260623.md
docs/TASK_TEMPLATES/: add_benchmark.md  add_test.md  new_operator.md
scripts/: check_perf_regression.sh  check_raw_cuda.sh  check_registry.sh  run_benchmarks.sh  run_profiling.sh  run_sanitizer.sh
src/: main.c
src/application/: generate.c
src/application/engine/: graph.c  graph.h  inference_engine.c
src/application/engine/test/: test_graph.c
src/application/include/: generate.h  inference_engine.h
src/application/model/: onnx_loader.c  onnx_loader.h  onnx_parser.c  onnx_parser.h
src/operator/: operator_init.c  operator_registry.c  operator_registry.def
src/operator/blas/: matmul.c  matmul_cuda.cu  matmul_int.h
src/operator/blas/test/: test_matmul.c
src/operator/include/: operator.h
src/operator/nn/: activations.c  activations_cuda.cu  add.c  add_cuda.cu  add_int.h  argmax.c  argmax_cuda.cu  argmax_int.h  batchnorm.c  batchnorm_cuda.cu  batchnorm_int.h  cast.c  cast_cuda.cu  cast_int.h  causal_mask.c  causal_mask_cuda.cu  causal_mask_int.h  clip.c  clip_cuda.cu  clip_int.h  concat.c  concat_cuda.cu  concat_int.h  conv.c  conv_cuda.cu  conv_f16_cuda.cu  conv_int.h  div.c  div_cuda.cu  div_int.h  elementwise_f16_cuda.cu  gather.c  gather_cuda.cu  gather_int.h  globalavgpool.c  globalavgpool_cuda.cu  globalavgpool_int.h  layernorm.c  layernorm_cuda.cu  layernorm_int.h  (+58 more)
src/operator/nn/test/: test_activations.c  test_add.c  test_batchnorm.c  test_concat.c  test_conv.c  test_div.c  test_gather.c  test_globalavgpool.c  test_layernorm.c  test_mul.c  test_pooling.c  test_relu.c  test_reshape.c  test_resize.c  test_slice.c  test_softmax.c  test_split.c  test_sub.c  test_transpose.c
src/platform/: data_type.c  tensor.c
src/platform/cpu/: platform_cpu.c
src/platform/cuda/: cuda_arena.cu  cuda_arena.h  cuda_device.cu  cuda_memory.cu  cuda_platform.h  cuda_platform_init.cu  cuda_reduce.cuh
src/platform/include/: cuda_debug_wrap.h  cuda_ops.h  platform.h
tests/: bench_bert_mha.c  bench_e2e.c  bench_mha_decode.c  bench_operators.cu  bench_profile.cu  create_test_model.py  gen_bert_base_test.py  gen_bert_mha_test.py  gen_bert_test.py  gen_classification_test.py  gen_gpt2_full.py  gen_gpt2_test.py  gen_onnx_test.py  gen_resnet_test.py  gen_yolo_test.py  mnist_classifier.onnx  resnet18_test.onnx  test_bert.c  test_bert_mha.c  test_classification.c  test_conv_scale.c  test_cuda_kernels.cu  test_fp16_ops.c  test_gather_minimal.c  test_gpt2_generate.c  test_mha_decode.c  test_onnx.c  test_ops_scale.c  test_quantize.cu  test_reduce.c  test_resnet.c  test_rope.c  test_utils.h  test_yolo.c  train_mnist.py
